--- a/src/index.css
+++ b/src/index.css
@@ -4,19 +4,19 @@
 
 @layer components {
   .nav-link-n {
-    @apply px-2.5 pt-1 md:px-2.5 md:pt-2 md:pb-1.5 flex flex-col md:flex-row md:gap-1.5 items-center justify-center rounded-t-xl font-semibold bg-[#f5f5f5]/[0.075] backdrop-blur-sm transition md:duration-200 ease-in active:bg-[#f5f5f5]/85 active:text-[#16181d] border md:border-2 border-transparent hover:border-[#fdfdff]/75 select-none shadow;
+    @apply px-2.5 pt-1 md:px-2.5 md:pt-2 md:pb-1.5 flex flex-col md:flex-row md:gap-1.5 items-center justify-center rounded-t-xl font-semibold bg-[#16181d]/[0.075]  backdrop-blur-sm transition md:duration-200 ease-in active:bg-[#f5f5f5]/75 active:text-[#16181d] border md:border-2 border-transparent hover:border-[#fdfdff] select-none shadow-md;
   }
   .nav-link-w {
-    @apply px-1 pt-1 md:px-1.5 md:pt-2 md:pb-1.5 flex flex-col md:flex-row md:gap-1.5 items-center justify-center rounded-t-xl font-semibold bg-[#f5f5f5]/[0.075] backdrop-blur-sm transition md:duration-200 ease-in active:bg-[#f5f5f5]/85 active:text-[#16181d] border md:border-2 border-transparent hover:border-[#fdfdff]/75 select-none shadow;
+    @apply px-1 pt-1 md:px-1.5 md:pt-2 md:pb-1.5 flex flex-col md:flex-row md:gap-1.5 items-center justify-center rounded-t-xl font-semibold bg-[#16181d]/[0.075] backdrop-blur-sm transition md:duration-200 ease-in active:bg-[#f5f5f5]/75 active:text-[#16181d] border md:border-2 border-transparent hover:border-[#fdfdff] select-none shadow-md;
   }
   .nav-link-span {
     @apply text-xs md:text-base;
   }
   .header-promo-btn {
-    @apply p-2 rounded-full font-semibold bg-[#f5f5f5]/[0.075] backdrop-blur-sm active:bg-[#f5f5f5]/75 active:text-[#16181d] border md:border border-transparent hover:border-[#f5f5f5] select-none shadow active:rotate-[360deg] transition md:duration-200 ease-in;
+    @apply p-2 rounded-full font-semibold bg-[#16181d]/[0.075] backdrop-blur-sm active:bg-[#f5f5f5]/75 active:text-[#16181d] border md:border border-transparent hover:border-[#fdfdff] select-none shadow-md active:rotate-[360deg] transition md:duration-200 ease-in;
   }
   header {
-    @apply flex flex-col items-center justify-center sticky top-0 z-20 bg-[#111111]/90 backdrop-blur-sm border-b border-[#fdfdff]/75 shadow transition-all md:duration-200 ease-in;
+    @apply flex flex-col items-center justify-center sticky top-0 z-20 bg-[#111111]/30 backdrop-blur border-b border-[#fdfdff]/75 shadow transition-all md:duration-200 ease-in;
   }
   nav {
     @apply px-2 py-1 md:px-2.5 md:py-1.5 flex items-center justify-between max-w-7xl w-full text-[#f5f5f5] transition-all md:duration-200 ease-in;
